--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,11 @@ a {
 	border-bottom: 1px dashed;
 	outline:none!important;
 }
+
+a:hover, a:focus {
+	color: transparent;
+}
+
 a:hover,a:focus,a:active {
 	/* color:#0D0D0D; */
 	text-decoration:none;
@@ -932,6 +937,7 @@ ul.social-buttons li:last-child {
 	font-size:17px;
 	line-height:40px;
 	text-align:center;
+	border-bottom: none;
 }
 .social-btn:hover,.social-btn:focus {
 	background: rgba(255, 232, 0, 1);
